# Encrypted-Chat

./: .gitignore  Cargo.toml
client/: Cargo.toml
client/src/: main.rs  messaging.rs
encrypted_chat_program/: Cargo.toml  README.md
encrypted_chat_program/src/: main.rs  messaging.rs
