[package]
name = "encrypted_chat_program"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10" # Encryption
rand = "0.8"
aead = "=0.5.2"
uuid = { version = "1.8", features = ["v4", "fast-rng", "macro-diagnostics"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util = "0.3"
base64 = "0.21"
